# StudyTimer

studytimer-api/: .env.example  .gitignore  .pylintrc  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
studytimer-api/.github/workflows/: gcp-deploy.yaml  scheduled-backups.yaml  supabase-deploy-migrations.yaml
studytimer-api/app/: __init__.py  main.py
studytimer-api/app/core/: auth.py  logger.py  settings.py  supabase_client.py
studytimer-api/app/routes/: auth_router.py
studytimer-api/app/tests/: conftest.py  test_auth_delete.py
studytimer-api/supabase/: .env.example  config.toml
studytimer-api/supabase/migrations/: 20260101120000_initial_schema.sql
studytimer-mobile/: .env.example  .gitignore  AGENTS.md  README.md  app.json  eas.json  package-lock.json  package.json
studytimer-mobile/app/: _layout.tsx
studytimer-mobile/app/(auth)/: email-auth.tsx  onboarding.tsx
studytimer-mobile/app/(tabs)/: _layout.tsx  index.tsx
studytimer-mobile/src/components/ui/: index.ts
studytimer-mobile/src/features/auth/stores/: authStore.ts
studytimer-mobile/src/lib/: theme.ts
